# RayBaser

./: .gitignore  CMakeLists.txt  README.md  RayBaser.code-workspace  RaytracingWeekend.code-workspace
include/: common.hpp  hittable.hpp  primitive.hpp  ray.hpp  scene.hpp
src/: main.cpp  primitive.cpp  scene.cpp
